// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an aggregation selection for duration reports 1`] = `
<Popover
  className="AggregationType"
  title={
    <React.Fragment>
      <span
        className="content"
      >
        Med
      </span>
      <Icon
        className="editIcon"
        type="edit"
      />
    </React.Fragment>
  }
>
  <Form
    compact={true}
  >
    <h4>
      Duration aggregations
    </h4>
    <fieldset>
      <Switch
        checked={false}
        disabled={false}
        key="min"
        label="Minimum"
        onChange={[Function]}
      />
      <Switch
        checked={false}
        disabled={false}
        key="avg"
        label="Average"
        onChange={[Function]}
      />
      <Switch
        checked={true}
        disabled={true}
        key="median"
        label="Median"
        onChange={[Function]}
      />
      <Switch
        checked={false}
        disabled={false}
        key="max"
        label="Maximum"
        onChange={[Function]}
      />
    </fieldset>
  </Form>
</Popover>
`;

exports[`should render an user task duration selection for user task duration reports 1`] = `
<Popover
  className="AggregationType"
  title={
    <React.Fragment>
      <span
        className="content"
      >
        Med
      </span>
      <Icon
        className="editIcon"
        type="edit"
      />
    </React.Fragment>
  }
>
  <Form
    compact={true}
  >
    <h4>
      User Task Duration
    </h4>
    <fieldset>
      <Switch
        checked={false}
        disabled={false}
        key="total"
        label="Total"
        onChange={[Function]}
      />
      <Switch
        checked={false}
        disabled={false}
        key="work"
        label="Work"
        onChange={[Function]}
      />
      <Switch
        checked={true}
        disabled={true}
        key="idle"
        label="Idle"
        onChange={[Function]}
      />
    </fieldset>
    <h4>
      Duration aggregations
    </h4>
    <fieldset>
      <Switch
        checked={false}
        disabled={false}
        key="min"
        label="Minimum"
        onChange={[Function]}
      />
      <Switch
        checked={false}
        disabled={false}
        key="avg"
        label="Average"
        onChange={[Function]}
      />
      <Switch
        checked={true}
        disabled={true}
        key="median"
        label="Median"
        onChange={[Function]}
      />
      <Switch
        checked={false}
        disabled={false}
        key="max"
        label="Maximum"
        onChange={[Function]}
      />
    </fieldset>
  </Form>
</Popover>
`;

exports[`should render nothing if the current result is no duration and the view is not variable 1`] = `""`;
